# chaos-bot

./: README.md  config.yml  pyproject.toml
src/chaos_bot/: cli.py  config.py  discovery.py  lease_db.py  logger.py  metrics.py  notifier.py  scheduler.py  vlan_hopper.py  web.py
src/chaos_bot/modules/: __init__.py  auth_prober.py  base.py  dns_noise.py  exploit_spray.py  http_probe.py  net_scanner.py
src/chaos_bot/static/: style.css
src/chaos_bot/templates/: base.html  config.html  dashboard.html  history.html  logs.html
tests/: test_config.py  test_discovery.py  test_lease_db.py  test_modules.py
